@@ -3,14 +3,12 @@
 #include <iostream>
 #include <cassert>
 #include <format>
-#include <fstream>
-#include <json.hpp>
 
 void dgm::Clip::init(
-	const sf::Vector2u & frameSize, 
-	const sf::IntRect & boundaries, 
-	const std::size_t frameCount, 
-	const sf::Vector2u & frameSpacing)
+	const sf::Vector2u& frameSize,
+	const sf::IntRect& boundaries,
+	const std::size_t frameCount,
+	const sf::Vector2u& frameSpacing)
 {
 	assert(frameSize.x > 0 and frameSize.y > 0);
 	assert(boundaries.left >= 0 and boundaries.top >= 0);
@@ -31,7 +29,8 @@ void dgm::Clip::init(
 		/ (static_cast<std::size_t>(frameSize.y) + static_cast<std::size_t>(frameSpacing.y));
 	const std::size_t MAX_AVAILABLE_FRAMES = X_FRAME_COUNT * Y_FRAME_COUNT;
 
-	if (frameCount > MAX_AVAILABLE_FRAMES) {
+	if (frameCount > MAX_AVAILABLE_FRAMES)
+	{
 		std::cerr << std::format("dgm::Clip::init called with frame count {}, but only {} frames are available"
 								 " given frameSize [{}, {}], boundaries [{}, {}, {}, {}] and frameSpacing [{}, {}]\n",
 								 frameCount, MAX_AVAILABLE_FRAMES,
@@ -41,8 +40,8 @@ void dgm::Clip::init(
 	}
 
 	const std::size_t CONCRETE_FRAME_COUNT = frameCount > 0
-												? (frameCount > MAX_AVAILABLE_FRAMES ? MAX_AVAILABLE_FRAMES : frameCount)
-												: MAX_AVAILABLE_FRAMES;
+		? (frameCount > MAX_AVAILABLE_FRAMES ? MAX_AVAILABLE_FRAMES : frameCount)
+		: MAX_AVAILABLE_FRAMES;
 
 	frames.clear();
 	frames.reserve(CONCRETE_FRAME_COUNT);
@@ -52,11 +51,13 @@ void dgm::Clip::init(
 	const int Y_INCREMENT = frameSize.y + frameSpacing.y;
 
 	int frameStartY = boundaries.top;
-	for (std::size_t y = 0, i = 0; y < Y_FRAME_COUNT; y++) {
+	for (std::size_t y = 0, i = 0; y < Y_FRAME_COUNT; y++)
+	{
 		int frameStartX = boundaries.left;
-		for (std::size_t x = 0; x < X_FRAME_COUNT && i < CONCRETE_FRAME_COUNT; x++, i++) {
+		for (std::size_t x = 0; x < X_FRAME_COUNT && i < CONCRETE_FRAME_COUNT; x++, i++)
+		{
 			frames.push_back(sf::IntRect(frameStartX, frameStartY, frameSize.x, frameSize.y));
-			
+
 			frameStartX += X_INCREMENT;
 		}
 
